Fixed code spacing

--- a/styles/card/index.scss
+++ b/styles/card/index.scss
@@ -19,7 +19,7 @@
     border-top: 1px solid $light-grey;
   	margin-top: 1em;
     margin-bottom: 0;
-    padding: 0.5em 1em 1.25em;
+    padding: 0.5em 1em;
     border-radius: 0 0 5px 5px;
   }
 }
